sdk/v0.5.6/deepseek.mdx
---
title: "deepseek"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/deepseek.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.deepseek


Pixeltable UDFs for Deepseek AI models.

Provides integration with Deepseek's language models for chat completions
and other AI capabilities.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; chat_completions()

```python Signature
@pxt.udf
chat_completions(
    messages: pxt.Json,
    *,
    model: pxt.String,
    model_kwargs: pxt.Json | None = None,
    tools: pxt.Json | None = None,
    tool_choice: pxt.Json | None = None
) -> pxt.Json
```

Creates a model response for the given chat conversation.

Equivalent to the Deepseek `chat/completions` API endpoint.
For additional details, see: [https://api-docs.deepseek.com/api/create-chat-completion](https://api-docs.deepseek.com/api/create-chat-completion)

Deepseek uses the OpenAI SDK, so you will need to install the `openai` package to use this UDF.

Request throttling:
Applies the rate limit set in the config (section `deepseek`, key `rate_limit`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install openai`

**Parameters:**

- **`messages`** (`pxt.Json`): A list of messages to use for chat completion, as described in the Deepseek API documentation.
- **`model`** (`pxt.String`): The model to use for chat completion.
- **`model_kwargs`** (`pxt.Json | None`): Additional keyword args for the Deepseek `chat/completions` API.
    For details on the available parameters, see: [https://api-docs.deepseek.com/api/create-chat-completion](https://api-docs.deepseek.com/api/create-chat-completion)
- **`tools`** (`pxt.Json | None`): An optional list of Pixeltable tools to use for the request.
- **`tool_choice`** (`pxt.Json | None`): An optional tool choice configuration.

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `deepseek-chat` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
messages = [
    {'role': 'system', 'content': 'You are a helpful assistant.'},
    {'role': 'user', 'content': tbl.prompt},
]
tbl.add_computed_column(
    response=chat_completions(messages, model='deepseek-chat')
)
```

